// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Microservice Snapshots Tests should match a basic snapshot (with correct name) 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 css-13i4rnv-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 styles__MicroserviceContainer-sc-1amr5hl-0 ezHSOK css-1ps6pg7-MuiPaper-root"
    >
      TestMicroservice
    </div>
  </div>
</div>
`;

exports[`Microservice Snapshots Tests should match a basic snapshot (with empty name) 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 css-13i4rnv-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 styles__MicroserviceContainer-sc-1amr5hl-0 ezHSOK css-1ps6pg7-MuiPaper-root"
    />
  </div>
</div>
`;
